<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_menu_1"
        android:title="@string/menu_1" />
    <item
        android:id="@+id/item_menu_2"
        android:title="@string/menu_2" />
    <item
        android:id="@+id/item_menu_3"
        android:title="@string/menu_3" />
    <item
        android:id="@+id/item_menu_4"
        android:title="@string/menu_4" />
    <item
        android:id="@+id/item_menu_5"
        android:title="@string/menu_5" />
    <item
        android:id="@+id/item_menu_6"
        android:title="@string/menu_6" />
    <item
        android:id="@+id/item_menu_7"
        android:title="@string/menu_7" />
    <item
        android:id="@+id/item_menu_8"
        android:title="@string/menu_8" />
    <item
        android:id="@+id/item_menu_9"
        android:title="@string/menu_9" />

</menu>