<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="4dp">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_photograph"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="photograph" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:text="@string/text_example"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_photograph"
        app:layout_constraintTop_toTopOf="@id/iv_photograph" />

    <TextView

        android:id="@+id/tv_autor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/autor_example"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_text"
        app:layout_constraintTop_toBottomOf="@id/tv_text" />

    <TextView
        android:id="@+id/label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:background="@drawable/shape_background"
        android:backgroundTint="@color/darkGrey"
        android:text="@string/label"
        app:layout_constraintStart_toStartOf="@+id/tv_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_autor" />

    <TextView
        android:id="@+id/label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/shape_background"
        android:backgroundTint="@color/darkGrey"
        android:text="@string/label"
        app:layout_constraintStart_toEndOf="@+id/label_1"
        app:layout_constraintTop_toTopOf="@+id/label_1" />


    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/iv_photograph"
        app:layout_constraintStart_toEndOf="@+id/iv_photograph"
        app:srcCompat="@drawable/ic_baseline_add_comment_24" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/comment_text"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@id/imageButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
